Fixed messages panel when wheel is right-aligned

--- a/static/main.css
+++ b/static/main.css
@@ -465,8 +465,7 @@ a:hover, a:active {
 
 #messages-panel {
     position: absolute;
-    bottom: 8;
-    left: 8;
+    margin: 8;
     min-width: 30%;
 
     pointer-events: none;
